--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0"
 serde_json = "1.0"
-wasmtime = "41"
+wasmtime = { version = "41", features = ["winch"] }
 wasmtime-wasi = "41"
 wasmtime-wasi-io = "41"
+
+[dev-dependencies]
+tempfile = "3.0"
